--- a/templates/partials/character-spell-book.hbs
+++ b/templates/partials/character-spell-book.hbs
@@ -1,25 +1,106 @@
 <h1>TEST</h3>
 
 <div>
+    {{#ifCond spells.level1.length '>' 0}}
     <button>sort level 1</button>
     <ol class="spellBooksItems">
 
-        {{#each actor.spells as |item id|}}
+        {{#each spells.level1 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
 
+    {{#ifCond spells.level2.length '>' 0}}
+    <button>sort level 2</button>
+    <ol class="spellBooksItems">
 
-        <li class="item flexrow" data-item-id="{{item._id}}">
-            <div class="item-image"><img src="{{item.img}}" title="{{item.name}}" width="24" height="24" /></div>
-            <h4 value="{{id}}">{{localize item.data.school}}</h4>
-            <h4 class="item-name">{{item.name}}</h4>
-            <span>sort niv. {{item.data.spellLevel}}</span>
-            <div class="item-controls">
-                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-eye"></i></a>
-                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-            </div>
-        </li>
+        {{#each spells.level2 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level3.length '>' 0}}
+    <button>sort level 3</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level3 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level4.length '>' 0}}
+    <button>sort level 4</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level4 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level5.length '>' 0}}
+    <button>sort level 5</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level5 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level6.length '>' 0}}
+    <button>sort level 6</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level6 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level7.length '>' 0}}
+    <button>sort level 7</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level7 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level8.length '>' 0}}
+    <button>sort level 8</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level8 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level9.length '>' 0}}
+    <button>sort level 9</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level9 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
+
+    {{#ifCond spells.level10.length '>' 0}}
+    <button>sort level 10</button>
+    <ol class="spellBooksItems">
+
+        {{#each spells.level10 as |spell id|}}
+            {{>"systems/naheulbeuk/templates/cards/spell-book-card.hbs" spell=spell}}
+        {{/each}}
+    </ol>
+    {{/ifCond}}
 
     
-    {{/each}}
-    </ol>
 </div>
 
