--- a/templates/cards/spell-book-card.hbs
+++ b/templates/cards/spell-book-card.hbs
@@ -1,10 +1,11 @@
-        <li class="item flexrow" data-item-id="{{spell._id}}">
-            <div class="item-image"><img src="{{spell.img}}" title="{{spell.name}}" width="24" height="24" /></div>
-            <h4 value="{{id}}">{{translationHelper "school" spell.data.school}}</h4>
-            <h4 class="item-name">{{spell.name}}</h4>
-            <span>sort niv. {{spell.data.spellLevel}}</span>
-            <div class="item-controls">
-                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-eye"></i></a>
-                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-            </div>
-        </li>
+
+
+            <tr>
+                <td><img src="{{spell.img}}" title="{{spell.name}}" width="24" height="24"/></td>
+                <td>{{translationHelper "school" spell.data.school}}</td>
+                <td>{{spell.name}}</td>
+                <td>sort niv. {{spell.data.spellLevel}}</td>
+                <td>{{spell.data.cost}} PA</td>
+                <td><a class="item-control item-edit" title="Edit Item"><i class="fas fa-eye"></i></a></td>
+                <td><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></td>
+            </tr>
