--- a/templates/sheets/namedCharacter-sheet.hbs
+++ b/templates/sheets/namedCharacter-sheet.hbs
@@ -2,6 +2,7 @@
     <div id="buttonsCharacterSheet">
         <button disabled class="active" id="buttonCharacterSheetCharacter"><i class="fas fa-user"></i> Personnage</button>
         <button id="buttonCharacterSheetSpellBook"><i class="fas fa-journal-whills"></i> Grimoire</button>
+        <button id="buttonCharacterSheetSkills"><i class="fas fa-journal-whills"></i> Compétences</button>
         <button id="buttonCharacterSheetSettings"><i class="fas fa-cogs"></i></button>
     </div>
     <div id="characterInformationSheet">
@@ -15,4 +16,10 @@
         {{> "systems/naheulbeuk/templates/partials/character-settings-sheet.hbs"}}
 
     </div>
+    <div id="characterSkillsSheet">
+        {{> "systems/naheulbeuk/templates/partials/character-skills-sheet.hbs"}}
+
+    </div>
 </form>
+
+CharacterSheetSkills
