--- a/styles/naheulbeuk.css
+++ b/styles/naheulbeuk.css
@@ -500,7 +500,7 @@ textarea {
 
 #buttonsCharacterSheet {
     position: absolute;
-    right: 10px;
+    right: 18px;
 }
 
 #buttonCharacterSheetSettings {
@@ -522,4 +522,21 @@ textarea {
 
 #spellBookSheet table {
     text-align: center;
+}
+
+#spellBookSheet table td,
+#spellBookSheet table tr {
+    width: 200px;
+    height: 50px;
+}
+
+#spellBookSheet table td img {
+    height: 50px;
+    width: 50px;
+    border: dashed 2px #ff9711;
+    background-color: #ffbc65;
+}
+
+#buttonCharacterSheetSkills {
+    width: 120px !important;
 }
