--- a/templates/sheets/namedCharacter-sheet.hbs
+++ b/templates/sheets/namedCharacter-sheet.hbs
@@ -3,6 +3,7 @@
         <button disabled class="active" id="buttonCharacterSheetCharacter"><i class="fas fa-user"></i> Personnage</button>
         <button id="buttonCharacterSheetSpellBook"><i class="fas fa-journal-whills"></i> Grimoire</button>
         <button id="buttonCharacterSheetSkills"><i class="fas fa-journal-whills"></i> Compétences</button>
+        <button id="buttonCharacterSheetBags"><i class="fas fa-box"></i> Sac</button>
         <button id="buttonCharacterSheetSettings"><i class="fas fa-cogs"></i></button>
     </div>
     <div id="characterInformationSheet">
@@ -16,10 +17,14 @@
         {{> "systems/naheulbeuk/templates/partials/character-settings-sheet.hbs"}}
 
     </div>
+    <div id="characterBagsSheet">
+        {{> "systems/naheulbeuk/templates/partials/character-bags-sheet.hbs"}}
+
+    </div>
+    
     <div id="characterSkillsSheet">
         {{> "systems/naheulbeuk/templates/partials/character-skills-sheet.hbs"}}
 
     </div>
 </form>
 
-CharacterSheetSkills
