--- a/templates/sheets/armor-sheet.hbs
+++ b/templates/sheets/armor-sheet.hbs
@@ -39,6 +39,8 @@
             <th>CHA</th>
             <th>ADR</th>
             <th>FO</th>
+            <th>PI</th>
+            <th>PS</th>
 
         </tr>
         <tr>
@@ -48,6 +50,8 @@
             <td><input name="data.abilities.CHA" type="text" value="{{data.abilities.CHA}}" data-dtype="Number" /></td>
             <td><input name="data.abilities.ADR" type="text" value="{{data.abilities.ADR}}" data-dtype="Number" /></td>
             <td><input name="data.abilities.FO" type="text" value="{{data.abilities.FO}}" data-dtype="Number" /></td>
+            <td><input name="data.abilities.PI" type="text" value="{{data.abilities.PI}}" data-dtype="Number" /></td>
+            <td><input name="data.abilities.PS" type="text" value="{{data.abilities.PS}}" data-dtype="Number" /></td>
         </tr>
     </table>
     {{/if}}
