--- a/templates/sheets/weapon-sheet.hbs
+++ b/templates/sheets/weapon-sheet.hbs
@@ -1,6 +1,6 @@
 <form class="{{cssClass}}" autocomplete="off">
     <header class="sheet-header">
-        <img src="icons/svg/sword.svg" data-edit="img" title="icons/svg/sword.svg" height="64" width="64" />
+        <img src="{{item.img}}" data-edit="img" title="{{item.img}}" height="64" width="64" />
         <h1><input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'Name' }}" /></h1>
         <input id='diceWeapon' type="image" src="icons/svg/d20-black.svg" />
     </header>
